canary/virtualservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  gateways:
    - app
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: app
